[metadata]
name = rfwtools-jlab
version = 0.0.1
author = Adam Carpenter
author-email = adamc@jlab.org
description = A package for working with C100 RF waveforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffersonLab/rfwtools
classifiers=
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
license = JLab
license-file = LICENSE

[options]
packages = find:
#package_dir =
#    =src
python_requires = >=3.7
setup_requires =
    setuptools >= 30.3.0
install_requires=
    matplotlib <= 3.2
    numpy
    pandas
    pyparsing
    python-dateutil
    requests
    statsmodels
    tzlocal
    PyYAML
    seaborn
    scikit-learn
    tqdm
    lttb

[options.packages.find]
# where = .
include = rfwtools
exclude = test